--- a/index.html
+++ b/index.html
@@ -19,12 +19,10 @@
 			/>
 
 			<div class="text-container one">
-				<div class="header"><span>Section 1</span></div>
+				<div class="header"><span>John P. Kennedy</span></div>
 				<div class="body">
-					<p>
-						Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet,
-						velit! Facere cupiditate numquam adipisci, consequuntur repellendus
-						incidunt dolor consequatur delectus?
+					<p class="large">
+						One Person can make a difference, and everyone shoud try.
 					</p>
 				</div>
 			</div>
@@ -35,12 +33,12 @@
 			<img src="./assets/img/cloud-3.svg" alt="" class="cloud cloud-3" />
 
 			<div class="text-container two">
-				<div class="header"><span>Section 2</span></div>
+				<div class="header"><span>John Podhoretz</span></div>
 				<div class="body">
 					<p>
-						Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet,
-						velit! Facere cupiditate numquam adipisci, consequuntur repellendus
-						incidunt dolor consequatur delectus?
+						Every great political campaign rewrites the rules; devising a new
+						way to win is what gives campaigns a comparative advantage against
+						their foes.
 					</p>
 				</div>
 			</div>
@@ -48,12 +46,11 @@
 		<section class="layer layer-2">
 			<img src="./assets/img/eagle.svg" alt="" class="cloud eagle" />
 			<div class="text-container three">
-				<div class="header"><span>Section 3</span></div>
+				<div class="header"><span>Margarete Mead</span></div>
 				<div class="body">
 					<p>
-						Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet,
-						velit! Facere cupiditate numquam adipisci, consequuntur repellendus
-						incidunt dolor consequatur delectus?
+						Never DOUBT that a small GROUP of THOUGHTFULL COMMITED citizens can
+						change the world. INDEED it's the ONLY THING THAT EVER HAS.
 					</p>
 				</div>
 			</div>
@@ -66,13 +63,13 @@
 				class="background farm"
 			/>
 			<div class="text-container four">
-				<div class="header"><span>Section 4</span></div>
+				<div class="header"><span>Fred Rogers</span></div>
 				<div class="body">
 					<p>
-						Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem
-						quibusdam consectetur dolorum laboriosam temporibus molestiae magni
-						praesentium aspernatur odit, beatae unde asperiores explicabo cum
-						tenetur facilis? Obcaecati optio nemo quae.
+						"If only you could sense how important you are to the lives of those
+						you meet; how important you can be to people you may never even
+						dream of. There is something of yourself that you leave at every
+						meeting with another person."
 					</p>
 				</div>
 			</div>
