--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				<div class="header"><span>John P. Kennedy</span></div>
 				<div class="body">
 					<p class="large">
-						One Person can make a difference, and everyone shoud try.
+						"One Person can make a difference, and everyone shoud try."
 					</p>
 				</div>
 			</div>
@@ -36,9 +36,9 @@
 				<div class="header"><span>John Podhoretz</span></div>
 				<div class="body">
 					<p>
-						Every great political campaign rewrites the rules; devising a new
+						"Every great political campaign rewrites the rules; devising a new
 						way to win is what gives campaigns a comparative advantage against
-						their foes.
+						their foes."
 					</p>
 				</div>
 			</div>
@@ -49,8 +49,8 @@
 				<div class="header"><span>Margarete Mead</span></div>
 				<div class="body">
 					<p>
-						Never DOUBT that a small GROUP of THOUGHTFULL COMMITED citizens can
-						change the world. INDEED it's the ONLY THING THAT EVER HAS.
+						"Never DOUBT that a small GROUP of THOUGHTFULL COMMITED citizens can
+						change the world. INDEED it's the ONLY THING THAT EVER HAS."
 					</p>
 				</div>
 			</div>
